Add context-dump scripts, JSON docs, and UI fixes
Add several maintenance scripts and documentation for the JSON tool and targeted context dumps; create context outputs used as LLM context packs. Introduce scripts (scripts/code-dump-tool.py, code-dump-json-tool.py, code-dump-case-converter.py, tool_context_dump.py) and add docs/doc-json-tool.md plus context/code-dump-json-tool.txt. Update README to list the new scripts. Refactor case-converter.html heavily: add analytics snippet, robust theme/accent initialization, accessibility improvements, debounce conversion, improved case conversion helpers, clipboard fallback and centralized window.textUtilsClipboardWrite usage, status handling and UI enhancements. Apply smaller fixes across many tool pages (button type attributes, clipboard write calls) and adjust JSON-TOOL-MIGRATION.md error parsing and privacy/analytics notes.

--- a/case-converter.html
+++ b/case-converter.html
@@ -227,7 +227,7 @@
 
             try {
                 if (navigator.clipboard && window.isSecureContext) {
-                    await navigator.clipboard.writeText(outputText.value);
+                    await window.textUtilsClipboardWrite(outputText.value);
                 } else if (!fallbackCopy(outputText.value)) {
                     throw new Error('Clipboard unavailable');
                 }
