--- a/date-time-info.html
+++ b/date-time-info.html
@@ -131,15 +131,15 @@
                         <h2>Date/Time Info</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary btn-compact">
+                        <button type="button" id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="copyBtn" class="btn btn-secondary">
+                        <button type="button" id="copyBtn" class="btn btn-secondary">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
-                        <button id="refreshBtn" class="btn btn-secondary">
+                        <button type="button" id="refreshBtn" class="btn btn-secondary">
                             <span class="material-icons">refresh</span>
                             Refresh
                         </button>
@@ -486,7 +486,7 @@
                     setStatus('Nothing to copy.', 'warning');
                     return;
                 }
-                navigator.clipboard.writeText(text).then(
+                window.textUtilsClipboardWrite(text).then(
                     () => setStatus('Copied.', 'success'),
                     () => setStatus('Copy failed.', 'error')
                 );
