--- a/font-awesome-chooser.html
+++ b/font-awesome-chooser.html
@@ -319,7 +319,7 @@
 
                     <div class="tool-actions">
 
-                        <button id="backButton" class="btn btn-secondary btn-compact">
+                        <button type="button" id="backButton" class="btn btn-secondary btn-compact">
 
                             <span class="material-icons">arrow_back</span>
 
@@ -327,7 +327,7 @@
 
                         </button>
 
-                        <button id="copyBtn" class="btn btn-secondary">
+                        <button type="button" id="copyBtn" class="btn btn-secondary">
 
                             <span class="material-icons">content_copy</span>
 
@@ -335,7 +335,7 @@
 
                         </button>
 
-                        <button id="clearBtn" class="btn btn-secondary">
+                        <button type="button" id="clearBtn" class="btn btn-secondary">
 
                             <span class="material-icons">clear</span>
 
@@ -520,7 +520,13 @@
             };
 
             const setPlaceholder = (text) => {
-                iconsGrid.innerHTML = `<div class="muted" style="grid-column:1/-1; text-align:center;">${text}</div>`;
+                iconsGrid.innerHTML = '';
+                const placeholder = document.createElement('div');
+                placeholder.className = 'muted';
+                placeholder.style.gridColumn = '1 / -1';
+                placeholder.style.textAlign = 'center';
+                placeholder.textContent = text;
+                iconsGrid.appendChild(placeholder);
                 iconCount.textContent = '0';
             };
 
@@ -665,7 +671,7 @@
                     setStatus('Nothing to copy.', 'warning');
                     return;
                 }
-                navigator.clipboard.writeText(outputSnippet.textContent).then(
+                window.textUtilsClipboardWrite(outputSnippet.textContent).then(
                     () => setStatus('Copied!', 'success'),
                     () => setStatus('Copy failed.', 'error')
                 );
