--- a/ip-info.html
+++ b/ip-info.html
@@ -156,15 +156,15 @@
                         <h2>IP Info</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary btn-compact">
+                        <button type="button" id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="refreshBtn" class="btn btn-secondary">
+                        <button type="button" id="refreshBtn" class="btn btn-secondary">
                             <span class="material-icons">refresh</span>
                             Refresh
                         </button>
-                        <button id="copyAllBtn" class="btn btn-secondary">
+                        <button type="button" id="copyAllBtn" class="btn btn-secondary">
                             <span class="material-icons">content_copy</span>
                             Copy All
                         </button>
@@ -179,27 +179,27 @@
                         <div class="info-row">
                             <span class="info-label">Public IP</span>
                             <span class="info-value" id="public-ip-val">Loading...</span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="public-ip-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="public-ip-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Hostname</span>
                             <span class="info-value" id="hostname-val">Loading...</span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="hostname-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="hostname-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Provider / ASN</span>
                             <span class="info-value" id="asn-val">Loading...</span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="asn-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="asn-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Location</span>
                             <span class="info-value" id="location-val">Loading...</span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="location-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="location-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Lat / Long</span>
                             <span class="info-value" id="coords-val">Loading...</span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="coords-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="coords-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Network Type</span>
@@ -213,22 +213,22 @@
                         <div class="info-row">
                             <span class="info-label">Browser</span>
                             <span class="info-value" id="browser-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="browser-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="browser-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">User Agent</span>
                             <span class="info-value" id="user-agent-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="user-agent-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="user-agent-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Operating System</span>
                             <span class="info-value" id="os-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="os-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="os-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Device Type</span>
                             <span class="info-value" id="device-type-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="device-type-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="device-type-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Platform</span>
@@ -247,7 +247,7 @@
                         <div class="info-row">
                             <span class="info-label">Screen</span>
                             <span class="info-value" id="screen-resolution-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="screen-resolution-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="screen-resolution-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Viewport</span>
@@ -282,12 +282,12 @@
                         <div class="info-row">
                             <span class="info-label">Local Time</span>
                             <span class="info-value" id="local-time-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="local-time-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="local-time-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                         <div class="info-row">
                             <span class="info-label">Timezone</span>
                             <span class="info-value" id="timezone-val"></span>
-                            <button class="btn btn-secondary btn-sm copy-btn" data-target="timezone-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
+                            <button type="button" class="btn btn-secondary btn-sm copy-btn" data-target="timezone-val"><span class="material-icons" style="font-size: 16px;">content_copy</span></button>
                         </div>
                     </div>
                 </div>
@@ -479,7 +479,7 @@
             const el = document.getElementById(targetId);
             if (!el) return;
             const text = el.textContent;
-            navigator.clipboard.writeText(text).then(() => {
+            window.textUtilsClipboardWrite(text).then(() => {
                 setStatus('Copied to clipboard', 'success');
             }).catch(() => setStatus('Copy failed', 'error'));
         }
@@ -491,7 +491,7 @@
                 'screen-resolution-val','viewport-val','color-depth-val','pixel-ratio-val','cpu-val','memory-val','cookies-enabled-val','local-time-val','timezone-val'
             ];
             const lines = fields.map(id => `${id.replace(/-val$/,'').replace(/-/g,' ')}: ${document.getElementById(id)?.textContent || ''}`);
-            navigator.clipboard.writeText(lines.join('\n')).then(() => {
+            window.textUtilsClipboardWrite(lines.join('\n')).then(() => {
                 setStatus('All info copied', 'success');
             }).catch(() => setStatus('Copy failed', 'error'));
         }
