--- a/random-numbers.html
+++ b/random-numbers.html
@@ -148,15 +148,15 @@
                         <h2>Random Number Generator</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary btn-compact">
+                        <button type="button" id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="copyBtn" class="btn btn-secondary">
+                        <button type="button" id="copyBtn" class="btn btn-secondary">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
-                        <button id="clearBtn" class="btn btn-secondary">
+                        <button type="button" id="clearBtn" class="btn btn-secondary">
                             <span class="material-icons">clear</span>
                             Clear
                         </button>
@@ -406,7 +406,7 @@
                     setStatus('Nothing to copy.', 'warning');
                     return;
                 }
-                navigator.clipboard.writeText(dom.output.value).then(
+                window.textUtilsClipboardWrite(dom.output.value).then(
                     () => setStatus('Copied to clipboard.', 'success'),
                     () => setStatus('Copy failed.', 'error')
                 );
