--- a/text-info.html
+++ b/text-info.html
@@ -122,19 +122,19 @@
                         <h2 id="toolName">Text Info</h2>
                     </div>
                     <div class="tool-actions">
-                        <button id="backButton" class="btn btn-secondary btn-compact">
+                        <button type="button" id="backButton" class="btn btn-secondary btn-compact">
                             <span class="material-icons">arrow_back</span>
                             Back
                         </button>
-                        <button id="pasteButton" class="btn btn-secondary">
+                        <button type="button" id="pasteButton" class="btn btn-secondary">
                             <span class="material-icons">content_paste</span>
                             Paste
                         </button>
-                        <button id="clearAll" class="btn btn-secondary btn-compact">
+                        <button type="button" id="clearAll" class="btn btn-secondary btn-compact">
                             <span class="material-icons">delete</span>
                             Clear
                         </button>
-                        <button id="copyOutput" class="btn btn-secondary btn-compact">
+                        <button type="button" id="copyOutput" class="btn btn-secondary btn-compact">
                             <span class="material-icons">content_copy</span>
                             Copy
                         </button>
@@ -232,7 +232,7 @@
         // Update input statistics
         function updateInputStats() {
             const length = inputText.value.length;
-            const lines = inputText.value.split('\n').length;
+            const lines = length === 0 ? 0 : inputText.value.split('\n').length;
             inputStats.textContent = `${length} chars, ${lines} lines`;
         }
 
@@ -397,7 +397,7 @@
             
             const text = results.join('\n');
             
-            navigator.clipboard.writeText(text).then(() => {
+            window.textUtilsClipboardWrite(text).then(() => {
                 statusMessage.textContent = 'Results copied to clipboard!';
                 statusMessage.className = 'success';
                 setTimeout(() => {
